creusot/tests/should_fail/prusti/logic/home_mismatch.stderr
error[creusot]: expected `X` found `creusot_contracts::__stubs::__prusti::Zombie<X>`
 --> home_mismatch.rs:6:5
  |
6 |     x
  |     ^

error: aborting due to previous error

